--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 
 <body>
-  <h1>hello 1</h1>
-  <h2>hello 2</h2>
-  <h3>hello 3</h3>
-  <h5>hello 5</h5>
-  <div class="box"><img src="" alt=""></div>
+  <a href="#" class="link"></a>
 </body>
 
 </html>
